--- a/assets/style/style1.css
+++ b/assets/style/style1.css
@@ -1,6 +1,10 @@
 a-scene {
   background: #222;
 }
-.ws {
-  background: lime;
+.audio {
+  position: fixed;
+  width: 10vw;
+  height: 5vh;
+  left: -15vw;
+  top: 5vh;
 }
