--- a/assets/style/style1.css
+++ b/assets/style/style1.css
@@ -44,7 +44,7 @@ font-family: 'Michroma', ;
 }
 
 #bottom_menu h1:hover {
- text-shadow: 0 0 6px rgba(131, 22, 22, 0.884); 
+ text-shadow: 0 0 6px white; 
 }
 
 
