--- a/assets/style/style1.css
+++ b/assets/style/style1.css
@@ -35,6 +35,7 @@ TOP MENU
 }
 .top-menu-credentials h1 {
   padding-top: 0;
+  padding-left: 10px;
   margin-top: 0;
   height: 50px;
   font-size: 36px;
@@ -89,13 +90,13 @@ Bottom Menu
 */
 #bottom_menu {
   width: 100vw;
-  height: 56px;
-  background: rgba(15, 142, 151, 0.37);
+  height: 36px;
+  background: rgba(15, 142, 151, 0.22);
   position: fixed;
   z-index: 900;
   left: 0;
   bottom: 0;
-  box-shadow: 0 0 10px white;
+  box-shadow: 0 0 6px white;
   border-top-right-radius: 20px;
   border-top-left-radius: 20px;
 }
