--- a/assets/style/style1.css
+++ b/assets/style/style1.css
@@ -38,7 +38,7 @@ TOP MENU
   padding-left: 10px;
   margin-top: 0;
   height: 50px;
-  font-size: 36px;
+  font-size: 34px;
   line-height: 50px;
   text-align: center;
   font-family: "Michroma";
@@ -56,6 +56,7 @@ TOP MENU
 .top-menu-nav ul {
   padding-top: 0;
   margin-top: 0;
+  padding-left: 10px;
 }
 .top-menu-nav li {
   padding-top: 2px;
