--- a/assets/style/style1.css
+++ b/assets/style/style1.css
@@ -56,7 +56,7 @@ TOP MENU
 .top-menu-nav ul {
   padding-top: 0;
   margin-top: 0;
-  padding-left: 10px;
+  margin-left: 40px;
 }
 .top-menu-nav li {
   padding-top: 2px;
